# linprov

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PUBLISHING.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
linprov/: Cargo.toml  build.rs
linprov-common/: Cargo.toml
linprov-common/src/: lib.rs
linprov-ebpf/: Cargo.toml
linprov-ebpf/.cargo/: config.toml
linprov-ebpf/src/: lib.rs  main.rs
linprov/ebpf/: Cargo.toml
linprov/ebpf/.cargo/: config.toml
linprov/src/: allow.rs  allowlist.rs  config.rs  control.rs  handler.rs  hashdb.rs  inode_storage.rs  install.rs  main.rs  mode.rs  notify.rs  privilege.rs  run.rs  setup.rs  upgrade.rs
tests/: README.md
tests/smoke/: allow.sh  and_or.sh  basic.sh  common.sh  deep_paths.sh  hot_reload.sh  inode_storage.sh  overflow.sh  propagate.sh  pseudofs.sh  run-all.sh  scripts.sh  soak.sh  subscribe.sh  xattr_fallback.sh
