[workspace]
resolver = "2"
members = [
    "linprov",
    "linprov-common",
]
# linprov/ebpf is a nested standalone package (built by linprov's
# build.rs); not a workspace member.
default-members = ["linprov"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Friday Ortiz <friday@ortiz.sh>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FridayOrtiz/linprov"
homepage = "https://github.com/FridayOrtiz/linprov"
readme = "README.md"
description = "eBPF mark-of-the-web for Linux: tag network-touched files and enforce who can exec them."
keywords = ["ebpf", "lsm", "security", "bpf", "provenance"]
categories = ["os::linux-apis", "command-line-utilities"]
rust-version = "1.85"

[workspace.dependencies]
# Aya fork — adds kfunc relocation resolution to aya-obj. Switch back to
# a crates.io release once the change lands upstream.
aya = { git = "https://github.com/FridayOrtiz/aya", branch = "main" }
aya-build = { git = "https://github.com/FridayOrtiz/aya", branch = "main" }
aya-log = { git = "https://github.com/FridayOrtiz/aya", branch = "main" }

anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "io-util",
    "fs",
    "net",
] }
xattr = "1"

# Both `path` (for dev) and `version` (for publish) — cargo prefers path
# when present and silently swaps it for the crates.io version on
# `cargo publish`. The nested linprov/ebpf package declares the same
# pair independently (it isn't a workspace member).
linprov-common = { path = "linprov-common", version = "0.1.0" }
