[workspace]
resolver = "2"
members = [
    "linprov",
    "linprov-common",
    "linprov-ebpf",
]
# `cargo build` from root builds linprov for the host. linprov-ebpf is
# in `members` for tooling visibility (cargo metadata, rust-analyzer)
# but is excluded from default-members because it only compiles for the
# `bpfel-unknown-none` target — linprov's build.rs handles the cross
# build internally.
default-members = ["linprov"]

[workspace.package]
# Versions are NOT inherited; each crate owns its own `version` so they
# can move independently. See CONTRIBUTING.md for bumping policy.
edition = "2021"
authors = ["Friday Ortiz <friday@ortiz.sh>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FridayOrtiz/linprov"
homepage = "https://github.com/FridayOrtiz/linprov"
readme = "README.md"
description = "eBPF mark-of-the-web for Linux: tag network-touched files and enforce who can exec them."
keywords = ["ebpf", "lsm", "security", "bpf", "provenance"]
categories = ["os::linux-apis", "command-line-utilities"]
rust-version = "1.85"

[workspace.dependencies]
# Aya fork published as `aya-friday` so linprov can ship to crates.io
# (upstream `aya` is owned by alessandrod). Carries the kfunc
# relocation patch, BPF_MAP_TYPE_INODE_STORAGE map support, and the
# func_info pruning needed for BPF programs with subprogs that the
# linker didn't emit FUNC entries for.
aya = { package = "aya-friday", version = "0.13.2" }
aya-ebpf = { package = "aya-friday-ebpf", version = "0.1.2" }

anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "io-util",
    "fs",
    "net",
] }
xattr = "1"

# Both `path` (for dev) and `version` (for publish) — cargo prefers path
# when present and silently swaps it for the crates.io version on
# `cargo publish`. linprov-ebpf is the same shape; linprov consumes it
# as a `[build-dependencies]` so that on `cargo install linprov`
# cargo downloads its source into the registry cache, where
# linprov's build.rs picks it up via `linprov_ebpf::SOURCE_DIR`.
linprov-common = { path = "linprov-common", version = "0.1.6" }
linprov-ebpf = { path = "linprov-ebpf", version = "0.2.6" }

# BPF objects need: panic="abort" (no unwinding in kernel), no
# overflow checks / debug-assertions (the compiler emits `loop {}`
# bodies on hit, which the verifier rejects), and `debug=2` so the
# LLVM-BPF backend emits a `.BTF` section. Cargo silently ignores
# per-package `[profile]` blocks when a crate is a workspace member,
# so we set these at the workspace-profile level. They also apply to
# linprov / linprov-common — that's fine, neither needs anything else.
[profile.dev]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

# Reinstate debug for linprov-ebpf only in release so the BPF object
# still gets `.BTF`.
[profile.release.package.linprov-ebpf]
debug = 2
