[package]
name = "linprov-common"
# ABI between the daemon and the BPF program: schema (OriginRecord,
# AllowRule, dim flags). Bump 0.x → 0.(x+1) on any change that alters
# the on-wire layout or fnv_hash semantics.
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "Shared types and constants for the linprov daemon and its BPF program (OriginRecord, AllowRule, FNV hashing)."
keywords = ["ebpf", "bpf", "linprov", "provenance"]
categories = ["os::linux-apis", "data-structures"]
rust-version.workspace = true

[features]
default = []
# Enable bytemuck Pod/Zeroable impls for zero-copy parsing in the userspace
# daemon. The eBPF crate must build without this feature (no_std + no extra
# crates linked into the program object).
user = ["dep:bytemuck"]

[dependencies]
bytemuck = { workspace = true, optional = true }
