[package]
name = "linprov"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
rust-version.workspace = true
# NOTE: `cargo install linprov` doesn't work yet — build.rs invokes a
# nested `cargo build` against `../linprov-ebpf` at the workspace path,
# which isn't present in a published tarball. Tracked as a follow-up;
# install via `cargo install --git https://github.com/FridayOrtiz/linprov`
# for now.
publish = false

[[bin]]
name = "linprov"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }

anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
tokio.workspace = true
xattr.workspace = true

linprov-common = { workspace = true, features = ["user"] }

[dev-dependencies]
tempfile = "3"
