[package]
name = "linprov"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
rust-version.workspace = true
# Ship the nested ebpf source so `cargo install linprov` is
# self-contained. `target/` is excluded by default; nothing else needs
# to be hidden from the published tarball.
include = [
    "src/**/*",
    "build.rs",
    "ebpf/src/**/*",
    "ebpf/Cargo.toml",
    "ebpf/.cargo/config.toml",
    "rust-toolchain.toml",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[[bin]]
name = "linprov"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }

anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
tokio.workspace = true
xattr.workspace = true

linprov-common = { workspace = true, features = ["user"] }

[dev-dependencies]
tempfile = "3"
