[package]
name = "linprov"
# Userspace daemon — what `cargo install linprov` ships. Bump 0.0.x for
# fixes / log tweaks / docs; 0.x → 0.(x+1) for CLI surface changes
# (mode/flags/env vars) or new operational behavior.
version = "0.2.23"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
rust-version.workspace = true

[[bin]]
name = "linprov"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }

anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
xattr.workspace = true

# `linprov notify` tray agent only. StatusNotifierItem tray (`ksni`,
# blocking API — its own thread, no async runtime needed here) plus
# send-only desktop notifications (`notify-rust`). Both reach the user
# session bus via D-Bus.
ksni = { version = "0.3", default-features = false, features = ["blocking", "tokio"] }
notify-rust = "4"
png = "0.17"

linprov-common = { workspace = true, features = ["user"] }

[build-dependencies]
# Used by build.rs to locate linprov-ebpf's source tree
# (via `linprov_ebpf::SOURCE_DIR`) and drive the nested
# `cargo build --target bpfel-unknown-none` for the BPF object.
linprov-ebpf = { workspace = true }

[dev-dependencies]
tempfile = "3"
