[package]
name = "linprov-ebpf"
version = "0.1.0"
edition = "2021"
authors = ["Friday Ortiz <friday@ortiz.sh>"]
license = "MIT OR Apache-2.0"
description = "BPF LSM programs powering the linprov daemon (Dual MIT/GPL kernel-side; MIT OR Apache-2.0 source)."
rust-version = "1.85"
# Nested package: built for `bpfel-unknown-none` by the outer linprov
# crate's build.rs (so it ships inside the linprov tarball on
# crates.io), never installed standalone.
publish = false

# Standalone workspace so this Cargo.toml doesn't try to join the outer
# linprov workspace — that's not allowed since this directory is inside
# a workspace member (`linprov/`).
[workspace]

[dependencies]
# `path` lets us track linprov-common changes during dev; `version` is
# what cargo uses once linprov is published to crates.io. Both must
# stay in sync.
linprov-common = { path = "../../linprov-common", version = "0.1.0" }
aya-ebpf = { git = "https://github.com/FridayOrtiz/aya", branch = "main" }

[[bin]]
name = "linprov-ebpf"
path = "src/main.rs"

# BPF objects need debuginfo so the LLVM-BPF backend emits a `.BTF`
# section, required for any storage map type that the kernel verifier
# wants to validate (inode/sk/task storage). Match the outer workspace
# profile shape — the BPF crate is `no_std` so optimizing aggressively
# is safe.
[profile.dev]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
